[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = [
  "Davide Lanza <info@davidelanza.it>",
]
description = "package_description"
license = "GNU GPL"
maintainers = [
  "Davide Lanza <info@davidelanza.it>",
]
name = "python_poetry_package"
version = "0.1"

readme = "README.md"

include = [
  {path = "tests", format = "sdist"},
]
packages = [
  {include = "python_poetry_package", from = "src"},
]

documentation = "https://python_poetry_package.readthedocs.io/"
homepage = "http://davidelanz.github.io/python_poetry_package"
repository = "https://github.com/davidelanz/python_poetry_package"

# keywords = ["keywork_1", "keywork_2", "keywork_3"]

# classifiers = [
#   "License :: OSI Approved :: GNU General Public License (GPL)",
#   "Operating System :: OS Independent",
#   "Programming Language :: Python :: 3",
#   "Development Status :: 3 - Alpha",
#   "Natural Language :: English",
#   "Intended Audience :: Science/Research",
#   "Topic :: Scientific/Engineering :: Artificial Intelligence",
# ]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = ">=0.971"
nbconvert = ">=7.0"
nbsphinx = ">=0.9.2"
pylint = ">=2.15.2"
pytest = ">=7.1.3"
pytest-check = ">=1.0.10"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.8.2"
sphinx = ">=5.1.1"
sphinx_rtd_theme = ">=1.0.0"

[tool.pytest.ini_options]
markers = []

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-few-public-methods",
  "logging-fstring-interpolation",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
explicit_package_bases = true
files = "src"
mypy_path = "src"
namespace_packages = true
show_error_codes = true
strict = true

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
